2011-01-05  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Xfer.pod: new offset and size arguments of xfer->start.
	* perl/Amanda/Xfer.swg: Add xfer_element_set_size.

2011-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-source-recovery.c: Never send more than the number
	  of bytes requested.
	* perl/Amanda/Xfer.swg (xfer_start): New offset and size arguments.
	* xfer-src/xfer-element.c: Add set_size method.
	* xfer-src/xfer-element.h (XferElement): Add size field.
	* xfer-src/xfer-test.c: Add offset=0 and size=0 to xfer_start call.
	* xfer-src/xfer.c (xfer_start): Add offset and size arguments. Call
	  xfer_element_set_size for the first element if size is set.
	* xfer-src/xfer.h (xfer_start): New prototype.
	* server-src/amfetchdump.pl, server-src/amidxtaped.pl,
	  server-src/amvault.pl: Call xfer->start() with offset and size
	  arguments.

2011-01-04  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Logfile.swg: Print size in bytes for taper log.
	* server-src/find.h (find_result_t): Add bytes.
	* server-src/find.c: Parse 'bytes' in 'log' file.
	* perl/Amanda/Report.pm: Parse 'bytes' in 'log' file.
	* perl/Amanda/DB/Catalog.pm: Parse 'bytes' in 'log' file.
	* server-src/amstatus.pl: Parse 'bytes' in 'amdump' log file.
	* installcheck/Amanda_DB_Catalog.pl: Fix for log file format change.
	* installcheck/taper.pl: Fix for log file format change.

2011-01-03  Jean-Louis Martineau <martineau@zmanda.com>
        * example/template.d/advanced.conf.in: Remove dumpuser.
        * server-src/amaddclient.pl: mkdir -p
        * server-src/amserverconfig.pl: Print the authorized_keys file
	  location based on $amhomedir

2010-12-27 Dan Locks <dwlocks@zmanda.com>
	*  packaging/deb/rules, packaging/rpm/amanda.spec.src: add missing
	   amservice entry to set perms at install time. Thanks to vpatton for
	   finding this.

2010-12-23  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Script_App.pm: Add FAILURE.
